# dpanel

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  LICENSE  LICENSE.md  README.md  ROADMAP.md  SECURITY.md  guideline.md  install-macos.sh  install.ps1  install.sh  installer.sh  int-tool.sh  project_plan.md
drust/: Cargo.toml  docs.md  runner.md
drust/deploy/: drust-start  drust.env.example  drust.service  install-service.sh
drust/src/: api.rs  app.rs  filemanager.rs  main.rs  php_config.rs  scripts.rs  ssl.rs  vhost.rs
drust/src/admin/: create_user.rs  disable_root_login.rs  mod.rs
drust/src/api/: admin.rs  database.rs  filemanager.rs  health.rs  laravel.rs  php.rs  script.rs  ssl.rs  vhost_ops.rs  web_stack.rs
drust/src/app/admin/: create_user.rs  disable_root.rs  mod.rs  options.rs
drust/src/app/laravel/: install.rs  mod.rs  options.rs
drust/src/app/support/: domain.rs  filesystem.rs  mod.rs  process.rs  system.rs  user.rs
drust/src/database/: mod.rs  request.rs
drust/src/filemanager/: common.rs  create.rs  delete.rs  exists.rs  filemove.rs  fix_permissions.rs  mod.rs  remove.rs  unzip.rs  upload.rs  user.rs  write.rs
drust/src/health/: checker.rs  mod.rs  status.rs
drust/src/laravel/: install.rs  mod.rs
drust/src/php/: config.rs
drust/src/script/: run.rs
drust/src/ssl/: certificate.rs  ensure.rs  mod.rs
drust/src/vhost/: common.rs  fix_panel_web_stack.rs  fix_web_stack.rs  mod.rs  options.rs  sync.rs
drust/src/vhost_ops/: sync.rs
drust/src/web_stack/: fix_panel_web_stack.rs  fix_web_stack.rs  mod.rs
(+635 files in other folders)
